<resources>
    <string name="app_name">Benim Tercihim</string>
    <string name="yeniuye">Yeni Üye</string>
    <string name="sifrehatirla">Şifremi Unuttum</string>
    <string name="kullaniciadi">Kullanıcı Adı</string>
    <string name="sifre">Şifre</string>
    <string name="uyesizdevam">Üye Olmadan Devam Et</string>
    <string name="eskisifre">Şu Anki Şifreniz</string>
    <string name="yenisifre1">Yeni Şifrenizi Giriniz</string>
    <string name="yesnisifre2">Yeni Şifrenizi Tekrar Giriniz</string>
    <string name="sifredegistir">Şifremi Değiştir</string>
    <string name="vazgec">Vazgeç</string>
    <string name="strAdSoyad">Adı Soyadı</string>
    <string name="strEposta">E-Posta Adresi</string>
    <string name="strKulAd">Kullanıcı Adı</string>
    <string name="strSifreTekrar">Şifre Tekrar</string>
    <string name="strUyeOl">Üye Ol</string>
    <string name="btnUniDegerlendir">Üniversiteni Değerlendir</string>
    <string name="btnSifreDegistir">Şifre Değiştir</string>
    <string name="btnSorgu">Üniversite Sorgula</string>
    <string name="btnUyelikSil">Üyeliğimi Sil</string>
    <string name="str_giris">Giriş Yap</string>
    <string name="strPuan">Puan Türü</string>
    <string name="strMin">En Küçük</string>
    <string name="strMak">En Yüksek</string>
    <string name="strPuanAraligi">Puan Aralığı</string>
    <string name="strKira">Şehirde Kira Ücretleri Nasıl?</string>
    <string name="strOzelYurt">Özel Yurt Ücretleri Nasıl?</string>
    <string name="strYemek">Lokanta Ücretleri Nasıl?</string>
    <string name="strAlisVeris">Alış Veriş İmkanları Nasıl?</string>
    <string name="strSehirSosyal">Şehrin Sosyal İmkanları Nasıl?</string>
    <string name="strUniSosyal">Üniversitenin Sosyal İmkanları Nasıl?</string>
    <string name="strIsImkani">Mezun Olunca İş İmkanları Nasıl?</string>
    <string name="strUlasim">Ulaşım Rahatlığı</string>
    <string name="strGuvenlik">Güvenlik</string>
    <string name="strSorgula">Sorgula</string>
    <string name="strSehir">Şehir</string>
    <string name="strUni">Üniversite</string>
    <string name="strBolum">Bölüm</string>
    <string name="strDegerlendir">Değerlendir</string>
    <string name="strEpostaGir">E-posta Adresinizi Girin</string>
    <string name="strSifreSifirla">Şifremi Sıfırla</string>
    <string name="strGeri">Geri</string>
    <string name="strCikis">Çıkış</string>
    <string name="strPDF">PDF İndir</string>
    <string name="sifresifirlamesajbasari">Şifre sıfırlama bilgileri e-posta adresinize gönderilmiştir.</string>
    <string name="sifresifirlamesajhata">Şifre sıfırlama bilgileri e-posta adresinize gönderililirken hata oluştu. Daha sonra tekrar deneyiniz.</string>
    <string name="oturumacmahata">Oturum açılamadı. Kullanıcı adı ve/veya şifreniz hatalı olabilir.</string>
    <string name="strSorguSonuc">Sorgu Sonucunuz</string>
    <string name="stFakulte">Fakülte</string>
</resources>