<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.madlion.benimtercihim.MainActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/kullanici"
        android:hint="@string/kullaniciadi"
        android:layout_marginTop="30dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sifre"
        android:hint="@string/sifre"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/yeniuye"
            android:id="@+id/yeniuye" />

        <Button
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/sifrehatirla"
            android:id="@+id/sifrehatirla" />
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/uyesizdevam"
        android:id="@+id/devamet"
        android:layout_marginTop="30dp" />

</LinearLayout>
