<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#f44336"
    tools:context="com.madlion.benimtercihim.SifreDegistir"
    android:orientation="vertical">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eskisifre"
        android:hint="@string/eskisifre"
        android:paddingTop="20dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/yenisifre1"
        android:hint="@string/yenisifre1"
        android:paddingTop="20dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/yenisifre2"
        android:hint="@string/yesnisifre2"
        android:paddingTop="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="clip_horizontal"
        android:paddingTop="20dp">

        <Button
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:drawable="@drawable/androidbuttonshapes"
            android:text="@string/sifredegistir"
            android:id="@+id/btnSifreDegistir" />

        <Button
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:text="@string/vazgec"
            android:id="@+id/vazgec" />
    </LinearLayout>
</LinearLayout>
