<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#f44336"
    tools:context="com.madlion.benimtercihim.Sorgula"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center|center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strPuan"
            android:id="@+id/textView6" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spnPuan" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strPuanAraligi"
        android:id="@+id/textView9" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strMin"
            android:id="@+id/textView7" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtMin"
            android:width="70dp"
            android:numeric="decimal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strMak"
            android:id="@+id/textView8" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtMak"
            android:width="70dp"
            android:numeric="decimal"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:id="@+id/scrollView"
        android:layout_gravity="right" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strKira"
                android:id="@+id/textView10" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/primary_light"
                android:id="@+id/rtKira"
                android:isIndicator="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strOzelYurt"
                android:id="@+id/textView11" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/primary_light"
                android:id="@+id/rtYurt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strYemek"
                android:id="@+id/textView12" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/primary_light"
                android:id="@+id/rtYemek" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strAlisVeris"
                android:id="@+id/textView13" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/primary_light"
                android:id="@+id/rtAlisVeris" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strSehirSosyal"
                android:id="@+id/textView14" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/primary_light"
                android:id="@+id/rtSehirSosyal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strUniSosyal"
                android:id="@+id/textView15" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/primary_light"
                android:id="@+id/rtUniSosyal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strIsImkani"
                android:id="@+id/textView16" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/primary_light"
                android:id="@+id/rtIsImkani" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strUlasim"
                android:id="@+id/textView17" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:progressTint="@color/primary_light"
                android:id="@+id/rtUlasim" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_color"
                android:text="@string/strGuvenlik"
                android:id="@+id/textView18" />

            <RatingBar
                android:layout_height="wrap_content"
                android:progressTint="@color/primary_light"
                android:id="@+id/rtGuvenlik"
                android:layout_width="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_vertical|center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strSorgula"
            android:id="@+id/btnSorgula" />
    </LinearLayout>

</LinearLayout>
